:bug: Fix wrong position of flags

--- a/src/u-capsule.vue/module.css
+++ b/src/u-capsule.vue/module.css
@@ -31,7 +31,7 @@
     position: relative;
 }
 
-.root:after {
+.root[flag]:after {
     content: '';
     position: absolute;
     top: 0;
